--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/marsoln/myBlog.git"
+        "url": "git+git@github.com:marsoln/myBlog.git"
     },
     "author": "marsoln",
     "license": "MIT",
