--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: marsoln's blog
 subtitle: "大道无门，千差有路；透得此关，乾坤独步"
 description: "Marsoln 修行札记"
 author: Marsoln
-language: zh
+language: 
 timezone: Asia/Shanghai
 
 # URL
