--- a/themes/alpha-dust/_config.yml
+++ b/themes/alpha-dust/_config.yml
@@ -19,7 +19,7 @@ comments:
 
 # Social Accounts
 twitter_url: https://twitter.com/marsoln1988
-github_url: https://github.com/marsoln/myBlog
+github_url: https://github.com/marsoln/my-blog
 email_url: marsoln1988@gmail.com
 
 # Footer About Text
